##############################################
# 2013-03-13 galculator 2.1.3 released       #
##############################################

2014-03-07 Simon Flöry <simon.floery@rechenraum.com>
	* Added Spanish tranlsation (thanks to jcsl, sf.net patch #8)

2014-02-19 Simon Flöry <simon.floery@rechenraum.com>
	* Fixed segfault introduced in r134

2014-01-13 Simon Flöry <simon.floery@rechenraum.com>
	* Updated Turkish translations (thanks to Volkan, fixes sf.net #103)

2014-01-08 Simon Flöry <simon.floery@rechenraum.com>
	* Fixing result string corruption when toggling sign (thanks to Juha 
		Kylliäinen for reporting)
	* Emitting signal in apply_preferences so that menu gets hidden after a 
		restart again (closes sf.net #99)

2013-09-01 Simon Flöry <simon.floery@rechenraum.com>
	* added Hungarian translation (thanks to Zoltan)

2013-08-14 Simon Flöry <simon.floery@rechenraum.com>
	* rpn_stack_list when pasting (fixes sf.net #98, thanks to  Don Allen for
		reporting).

##############################################
# 2013-04-28 galculator 2.1.2 released       #
##############################################

2013-04-28 Simon Flöry <simon.floery@rechenraum.com>
	* Changed encoding of ro.po and pt_BR.po to UTF-8
	* adapted po files to new ui file structure
	* updated German translations

##############################################
# 2013-04-27 galculator 2.1.1 released       #
##############################################

2013-03-14 Simon Flöry <simon.floery@rechenraum.com>
	* Added Lithuanian translation (thanks to gymka, closes sf.net #94)

2013-02-17 Simon Flöry <simon.floery@rechenraum.com>
	* Creating GTK3 versions of all ui glade files that have GtkTable, which is
		deprecated in GTK3 (fixes sf.net #93)
	* Having non-recursive variant of factorial with correct upper bound checking
		depending on double or quad precision (sf.net patch #6 by t.sonntig)

2013-02-14 Simon Flöry <simon.floery@rechenraum.com>